# fgi

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
fgi/: apk.py  arguments.py  cache.py  cmd.py  constants.py  downloader.py  frida_config.py  library.py  logger.py  main.py  manifest.py  path.py  smali.py
fgi/loaders/: apk.py  base.py  split.py
fgi/utils/: not_none.py
