[project]
name = "fgi"
version = "1.0.0"
requires-python = ">= 3.10"

[tool.poetry]
name = "fgi"
version = "1.0.0"
description = ""
authors = ["commonuserlol <commonuserlol@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.ruff]
line-length = 160
lint.select = ["E4", "E7", "E9", "F", "W"]

[tool.basedpyright]
reportImportCycles = false

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 160
disable = "missing-module-docstring,missing-class-docstring,missing-function-docstring,raise-missing-from,broad-exception-caught"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
fgi = "fgi.main:main"
